2001-11-24  Bruno Haible  <bruno@clisp.org>

	* urlget.c (fetch): Call execute_java_class with quiet=true. If Java
	program failed, try wget or lynx.

	* read-java.c (msgdomain_read_java): Update for changed
	execute_java_class parameter list.

2001-11-24  Bruno Haible  <bruno@clisp.org>

	* msgexec.c (process_message): Really process each plural form once.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (is_nonobsolete): New function.
	(main): Remove obsolete messages after reading all input files.
	(check_header_entry): New function, extracted from
	format_directive_message.
	(format_directive_message): Perform duplicate checking also on
	obsolete, untranslated and fuzzy messages, like msgmerge and the
	other tools do. Put also obsolete, untranslated and fuzzy messages
	on the result list, but mark them obsolete.
	(read_po_file): Call po_lex_pass_obsolete_entries.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* po.c (po_callback_message): Ignore obsolete header entries, for
	consistency with msgdomain_list_print(), compare_po_locale_charsets(),
	iconv_message_list(), catenate_msgdomain_list().

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (struct msg_domain): Remove symbol_tab field.
	(main, new_domain): Update.
	(format_directive_message): Use message_list_search instead of
	explicit hash table calls.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* message.h: Include hash.h.
	(message_list_ty): Add use_hashtable, htable fields.
	(message_list_alloc): Add 'use_hashtable' argument.
	(msgdomain_alloc): Likewise.
	(msgdomain_list_ty): Add use_hashtable field.
	(msgdomain_list_alloc): Add 'use_hashtable' argument.
	* message.c: Include hash.h.
	(message_list_alloc): Add 'use_hashtable' argument.
	(message_list_free): Delete the hash table if present.
	(message_list_append): If a hash table is in use, verify no duplicates.
	(message_list_prepend): Likewise.
	(message_list_remove_if_not): Remove hash table after removal.