@@ -1,3 +1,10 @@
+2001-11-25  Bruno Haible  <bruno@clisp.org>
+
+	* msginit.c (canonical_locale_charset): Return the charset of 'locale'
+	if available.
+	(get_title): Return a correct value even if 'locale' is a nonexistent
+	locale.
+
 2001-11-24  Bruno Haible  <bruno@clisp.org>
 
 	* urlget.c (fetch): Call execute_java_class with quiet=true. If Java
